--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-      "editor.tabSize": 2
-}
+      "editor.tabSize": 2,
+      "workbench.colorCustomizations": {
+            "titleBar.activeForeground": "#000",
+            "titleBar.inactiveForeground": "#000000CC",
+            "titleBar.activeBackground": "#0070C0",
+            "titleBar.inactiveBackground": "#002060"
+      }}
