--- a/package.json
+++ b/package.json
@@ -217,39 +217,6 @@
   },
   "dependencies": {
     "antd": "3.1.1",
-    "babel-polyfill": "6.26.0",
-    "chalk": "1.1.3",
-    "compression": "1.7.3",
-    "cross-env": "5.2.0",
-    "eth-lightwallet": "3.0.1",
-    "express": "4.16.3",
-    "fontfaceobserver": "2.0.9",
-    "history": "4.7.2",
-    "hoist-non-react-statics": "2.1.1",
-    "immutable": "3.8.2",
-    "intl": "1.2.5",
-    "invariant": "2.2.4",
-    "ip": "1.1.5",
-    "lodash": "4.17.10",
-    "minimist": "1.2.0",
-    "prop-types": "15.6.2",
-    "react": "^15.6.0",
-    "react-dom": "^15.6.0",
-    "react-helmet": "5.1.3",
-    "react-loadable": "4.0.5",
-    "react-redux": "5.0.7",
-    "react-router-dom": "4.1.1",
-    "react-router-redux": "5.0.0-alpha.6",
-    "redux": "3.6.0",
-    "redux-immutable": "4.0.0",
-    "redux-saga": "0.15.3",
-    "reselect": "3.0.1",
-    "sanitize.css": "5.0.0",
-    "store": "^2.0.12",
-    "styled-components": "2.0.0",
-    "warning": "3.0.0",
-    "web3": "0.20.7",
-    "whatwg-fetch": "2.0.4",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "7.2.3",
@@ -262,12 +229,16 @@
     "babel-plugin-transform-react-constant-elements": "6.23.0",
     "babel-plugin-transform-react-inline-elements": "6.22.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.15",
+    "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "chalk": "1.1.3",
     "cheerio": "0.22.0",
     "circular-dependency-plugin": "3.0.0",
+    "compression": "1.7.3",
     "coveralls": "2.13.1",
+    "cross-env": "^5.2.0",
     "css-loader": "0.28.7",
     "empty-module": "^0.0.2",
     "enzyme": "2.8.2",
@@ -279,29 +250,58 @@
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-redux-saga": "0.3.0",
+    "eth-lightwallet": "3.0.1",
     "eventsource-polyfill": "0.9.6",
     "exports-loader": "0.6.4",
+    "express": "4.16.3",
     "file-loader": "0.11.1",
+    "fontfaceobserver": "2.0.9",
+    "history": "4.7.2",
+    "hoist-non-react-statics": "2.1.1",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.29.0",
     "image-webpack-loader": "2.0.0",
+    "immutable": "3.8.2",
     "imports-loader": "0.7.1",
+    "intl": "1.2.5",
+    "invariant": "2.2.4",
+    "ip": "1.1.5",
     "jest-cli": "20.0.4",
     "lint-staged": "3.5.1",
+    "lodash": "4.17.10",
+    "minimist": "1.2.0",
     "ngrok": "2.2.9",
     "node-plop": "0.7.0",
     "null-loader": "0.1.1",
     "offline-plugin": "4.8.1",
     "plop": "1.8.0",
+    "prop-types": "15.6.2",
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0",
+    "react-helmet": "5.1.3",
+    "react-loadable": "4.0.5",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.1.1",
+    "react-router-redux": "5.0.0-alpha.6",
     "react-test-renderer": "15.5.4",
+    "redux": "3.6.0",
+    "redux-immutable": "4.0.0",
+    "redux-saga": "0.15.3",
+    "reselect": "3.0.1",
     "rimraf": "2.6.2",
+    "sanitize.css": "5.0.0",
     "shelljs": "0.7.7",
     "sinon": "2.3.2",
+    "store": "^2.0.12",
     "style-loader": "0.18.1",
+    "styled-components": "2.0.0",
     "url-loader": "0.5.8",
+    "warning": "3.0.0",
+    "web3": "0.20.7",
     "webpack": "3.12.0",
     "webpack-dev-middleware": "1.11.0",
     "webpack-hot-middleware": "2.23.1",
-    "webpack-monitor": "^1.0.13"
+    "webpack-monitor": "^1.0.13",
+    "whatwg-fetch": "2.0.4"
   }
 }
