--- a/package.json
+++ b/package.json
@@ -295,7 +295,7 @@
     "store": "^2.0.12",
     "style-loader": "0.18.1",
     "styled-components": "2.0.0",
-    "upath": "^1.1.0",
+    "upath": "1.1.0",
     "url-loader": "0.5.8",
     "warning": "3.0.0",
     "web3": "0.20.7",
